kustomize/overlays/scots-lab/apps/photoprism/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: photoprism
  namespace: photoprism
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/name: PhotoPrism
    gethomepage.dev/group: Applications
    gethomepage.dev/description: Photo Gallery
    gethomepage.dev/icon: photoprism.png
    gethomepage.dev/href: https://photos.srbii.com
    gethomepage.dev/weight: '21'
spec:
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  hostnames:
  - photos.srbii.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: photoprism-photoprism
      port: 2342
